[tool.poetry]
name = "tierpeak-apollo-middleman"
version = "0.1.0"
description = ""
authors = ["Selim Belhaouane <selim.belhaouane@gmail.com>"]
readme = "README.md"
packages = [{include = "tierpeak_apollo_middleman"}]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.110.1"
httpx = "^0.27.0"
pydantic = "^2.7.0"
uvicorn = "^0.29.0"

[tool.poetry.group.dev.dependencies]
ruff = "^0.3.7"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
